--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://2dc09a96-0bc2-4cdf-a219-8b1d0c844756.preview.emergentagent.com
 WDS_SOCKET_PORT=443
